--- a/style.css
+++ b/style.css
@@ -5,15 +5,13 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Quicksand', sans-serif;
-    font: bold;
 }
 header{
     width: 100%;
     height: 15%;
     padding-top: 25px;
-    background-color: #51ad94;
+    background-color: #dcdcdc;
     box-sizing: border-box;
-    
 }
 header h1{
     text-align: center;
@@ -25,7 +23,7 @@ header h1{
     width: 100%;
     box-sizing: border-box;
     padding: 30px;
-    background-color: #7ce8b0;
+    background-color: #3cb371;
 }
 .score-container{
     position: relative;
@@ -75,17 +73,17 @@ header h1{
     width: 80px;
     height: 80px;
     margin :5px;
-    border: 3px solid #3a1e1e;
+    border: 3px solid #00fa9a;
     border-radius: 50%;
-    color: #341e1e;
+    color: #00fa9a;
     font-size: 40px;
-    background-color: white;
+    background-color: rgb(245, 250, 244);
     cursor: pointer;
     outline: none;
     transition: .3s;
 }
 .bn:hover{
-    background-color: #52a887;
+    background-color: #00fa9a;
     border-color: white;
     color: white;
 }
@@ -110,16 +108,16 @@ header h1{
 }
 #YourObject{
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 110px;
     height: 110px;
     font-size: 50px;
     padding-top: 20px;
-    border: 3px solid #287b5b;
+    border: 3px solid #00fa9a;
     border-radius: 50%;
-    color: #2b7659;
+    color: #00fa9a;
     background-color: white;
     box-sizing: border-box;
     text-align: center;
@@ -133,9 +131,9 @@ header h1{
     height: 110px;
     font-size: 50px;
     padding-top: 20px;
-    border: 3px solid #24654c;
+    border: 3px solid #00fa9a;
     border-radius: 50%;
-    color: #275f4a;
+    color: #00fa9a;
     background-color: white;
     box-sizing: border-box;
     text-align: center;
@@ -170,7 +168,7 @@ header h1{
     border: 3px solid green;
     box-shadow: 0 0 10px green;
     border-radius: 50%;
-    color: #511717;
+    color: #00fa9a;
     font-size: 35px;
     background-color: white;
     cursor: pointer;
@@ -184,7 +182,7 @@ header h1{
     border: 3px solid red;
     box-shadow: 0 0 10px red;
     border-radius: 50%;
-    color: #235542;
+    color: #00fa9a;
     font-size: 35px;
     background-color: white;
     cursor: pointer;
@@ -198,7 +196,7 @@ header h1{
     border: 3px solid #292928;
     box-shadow: 0 0 10px #292928;
     border-radius: 50%;
-    color: #264b3d;
+    color: #00fa9a;
     font-size: 35px;
     background-color: white;
     cursor: pointer;
